#add campo dataDeFabricacao